--- a/src/Post.css
+++ b/src/Post.css
@@ -5,12 +5,17 @@
   box-shadow: 0px 5px 7px -7px rgba(0, 0, 0, 0.75);
 }
 
-.post__avatat {
+.post__avatar {
   margin-right: 10px;
 }
 
+/* .post__topInfo {
+  display: flex;
+} */
+
 .post__topInfo > h3 {
   font-size: medium;
+  /* margin-right: 10px; */
 }
 
 .post__topInfo > p {
@@ -20,6 +25,7 @@
 
 .post__image > img {
   width: 100%;
+  /* margin: 0 20px; */
 }
 
 .post__options {
